# Minecraft_clone

./: .gitattributes  CMakeLists.txt  README.md
include/: Block.h  Camera.h  Chicken.h  Chunk.h  Entity.h  Fox.h  FrameBuffer.h  Game.h  LensFlare.h  Light.h  Luminary.h  Material.h  Mesh.h  Mob.h  Moon.h  Player.h  Shader.h  Skin.h  Sky.h  Sun.h  Texture.h  VertexBuffer.h  Wolf.h  World.h  libraries.h  utils.h
libs/mingw/x64/lib/: libSDL2_image.la
libs/mingw/x64/lib/pkgconfig/: SDL2_image.pc
libs/mingw/x86/lib/pkgconfig/: SDL2_image.pc
shaders/: block.frag  block.vert  debug.frag  debug.vert  entity.frag  entity.vert  in_water.frag  in_water.vert  lens_flare.frag  lens_flare.vert  luminary.frag  luminary.vert  mob.frag  mob.vert  screen.frag  screen.vert  sky.frag  sky.vert  water.frag
sources/: Block.cpp  Camera.cpp  Chicken.cpp  Chunk.cpp  Entity.cpp  Fox.cpp  FrameBuffer.cpp  Game.cpp  LensFlare.cpp  Light.cpp  Luminary.cpp  Material.cpp  Mesh.cpp  Mob.cpp  Moon.cpp  Player.cpp  Shader.cpp  Skin.cpp  Sky.cpp  Sun.cpp  Texture.cpp  VertexBuffer.cpp  Wolf.cpp  World.cpp  main.cpp  utils.cpp
